<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/less_round_shape_primary">

    <TextView
        android:id="@+id/tv_enter_title"
        android:layout_width="238dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/less_round_shape_primary_dark"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/fragment_enter_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_enter_amount"
        android:layout_width="238dp"
        android:layout_height="52dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/less_round_shape_primary_dark"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/fragment_enter_price"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/fragment_title_here"
        android:inputType="text"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_enter_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_title"
        android:text="@string/title_default_value"
        android:gravity="center"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/et_input_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/fragment_amount_here"
        android:inputType="number"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_amount"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/amount_default_value"
        android:gravity="center"
        android:textColor="@android:color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_shape_primary_light"
        android:text="@string/fragment_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_shape_primary_light"
        android:text="@string/fragment_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>