<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/less_round_shape"
    android:layout_margin="8dp">

    <TextView
        android:textColor="@color/textOnSecondary"
        android:fontFamily="@font/inter_regular"
        android:textSize="16sp"
        android:id="@+id/tv_single_item_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:text="@string/single_item_default_title"
        android:ellipsize="end"
        />

    <TextView
        android:textColor="@color/textOnSecondary"
        android:fontFamily="@font/inter_regular"
        android:textSize="12sp"
        android:id="@+id/tv_single_item_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_single_item_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_width="180dp"
        android:layout_height="20dp"
        android:text="@string/single_item_default_category"
        android:ellipsize="end"
        />

    <ImageView
        android:id="@+id/btn_bin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bin_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/delete_icon_description" />

    <ImageView
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_bin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/add_one_item_description"
        />

    <ImageView
        android:id="@+id/amount_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/amount_area"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/amount_description"
        />

    <TextView
        android:id="@+id/amount_of_items"
        android:text="@string/single_item_amount_default_value"
        android:textSize="11sp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="@+id/amount_area"
        app:layout_constraintStart_toStartOf="@id/amount_area"
        android:ellipsize="end"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/minus_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/amount_area"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/remove_one_item_descriprtion" />

</androidx.constraintlayout.widget.ConstraintLayout>